# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("event_threshold_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "include",
    "$hiview_base/event_threshold/include",
  ]
}

config("event_threshold_private_config") {
  include_dirs = [
    ".",
    "include",
  ]
}

ohos_source_set("event_threshold_source") {
  part_name = "hiview"

  subsystem_name = "hiviewdfx"

  public_configs = [ ":event_threshold_config" ]

  configs = [ ":event_threshold_private_config" ]

  sources = [
    "event_threshold_manager.cpp",
    "sys_event_user.cpp",
  ]

  deps = [
    "$hiview_base/utility:hiview_utility",
    "//third_party/jsoncpp:jsoncpp",
  ]

  external_deps = [ "hilog:libhilog" ]
}
