# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("running_status_logger_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "include",
    "$hiview_adapter/dbstore/include",
    "$hiview_adapter/utility/include",
    "$hiview_adapter/utility/include/extra",
    "$hiview_base/log/include",
    "$hiview_base/include",
    "$hiview_base/running_status_logger/include",
    "$hiview_root/include",
  ]
}

config("running_status_logger_private_config") {
  include_dirs = [
    ".",
    "include",
  ]
}

ohos_source_set("running_status_logger_source") {
  part_name = "hiview"

  public_configs = [ ":running_status_logger_config" ]

  configs = [ ":running_status_logger_private_config" ]

  sources = [ "running_status_logger.cpp" ]

  external_deps = [ "hilog_native:libhilog" ]
}
