# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("sys_event_logger_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "cache/include",
    "event/include",
    "factory/include",
    "idl/include",
    "include",
    "timer/include",
    "//base/powermgr/battery_statistics/utils/native/include",
    "//third_party/jsoncpp/include",
  ]
}

ohos_source_set("sys_event_logger") {
  sources = [
    "cache/event_cacher.cpp",
    "cache/event_db_helper.cpp",
    "cache/json_parser.cpp",
    "event/app_usage_event.cpp",
    "event/logger_event.cpp",
    "event/param_value.cpp",
    "event/plugin_event.cpp",
    "event/plugin_fault_event.cpp",
    "event/plugin_stats_event.cpp",
    "event/sys_usage_event.cpp",
    "factory/app_usage_event_factory.cpp",
    "factory/plugin_fault_event_factory.cpp",
    "factory/plugin_load_event_factory.cpp",
    "factory/plugin_stats_event_factory.cpp",
    "factory/plugin_unload_event_factory.cpp",
    "factory/sys_usage_event_factory.cpp",
    "idl/hiview_shutdown_callback.cpp",
    "idl/hiview_shutdown_callback_proxy.cpp",
    "idl/hiview_shutdown_callback_stub.cpp",
    "sys_event_logger.cpp",
    "timer/hiview_timer_info.cpp",
  ]

  public_configs = [ ":sys_event_logger_config" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "battery_statistics:batterystats_client",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "power_manager_native:powermgr_client",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "time_native:time_client",
    "utils_base:utils",
  ]

  defines = []
  if (device_usage_statistics_enable) {
    external_deps += [ "device_usage_statistics:usagestatsinner" ]
    defines += [ "DEVICE_USAGE_STATISTICS_ENABLE" ]
  }

  deps = [
    "$hiview_adapter/dbstore:db_store_source",
    "$hiview_adapter/utility:hiview_adapter_utility",
    "//third_party/jsoncpp:jsoncpp",
  ]
}

group("unittest") {
  testonly = true
  deps = []
}

group("moduletest") {
  testonly = true
  deps = []
}
