# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("hiview_utils_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    ".",
    "include",
    "$hiview_adapter/utility/include",
  ]
}

ohos_source_set("hiview_utility") {
  public_configs = [ ":hiview_utils_config" ]

  sources = [
    "memory_util.cpp",
    "string_util.cpp",
  ]

  deps = [ "$hiview_adapter/utility:hiview_adapter_utility" ]

  defines = []
  if (use_musl && use_jemalloc && use_jemalloc_dfx_intf) {
    defines += [ "USE_JEMALLOC_DFX_INTF" ]
  }

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
  ]

  part_name = "hiview"
}
