# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hiretrieval_config") {
  visibility = [ "*:*" ]

  include_dirs = [ "include" ]
}

ohos_shared_library("libhiretrieval") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  configs = [ ":hiretrieval_config" ]

  public_configs = [ ":hiretrieval_config" ]

  sources = [
    "src/hiretrieval_base_util.cpp",
    "src/hiretrieval_dynamic_loader.cpp",
    "src/hiretrieval_mgr.cpp",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "preferences:native_preferences",
  ]

  version_script = "libhiretrieval.map"

  install_enable = true

  part_name = "hiview"

  innerapi_tags = [ "platformsdk" ]

  subsystem_name = "hiviewdfx"
}
