# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("sys_event_store_config") {
  visibility = [ "*:*" ]
  include_dirs = [
    ".",
    "include",
  ]
}

ohos_source_set("sys_event_store") {
  part_name = "hiview"
  subsystem_name = "hiviewdfx"
  public_configs = [ ":sys_event_store_config" ]

  sources = [
    "store/sys_event_db_cleaner.cpp",
    "store/sys_event_db_mgr.cpp",
    "sys_event_store.cpp",
  ]

  deps = [
    "$hiview_adapter/plugins/eventservice/service:sys_event_service_adapter",
    "$hiview_adapter/plugins/eventservice/service/idl:sys_event_service_ohos",
    "$hiview_base:hiviewbase",
    "$hiview_core:hiview_core",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = []
}

group("moduletest") {
  testonly = true
  deps = []
}
