# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

ohos_prebuilt_etc("adft_plugin_config") {
  source = "adft_plugin_config"
  relative_install_dir = "hiview"
  part_name = "hiview"
  subsystem_name = "hiviewdfx"
}

ohos_shared_library("adft") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  deps = [
    ":adft_plugin_config",
    "$hiview_base:hiviewbase",
    "$hiview_plugin/event_store:sys_event_store",
    "$hiview_plugin/privacy_controller:privacy_controller",
    "$hiview_plugin/sys_dispatcher:sys_dispatcher",
    "$hiview_plugin/sysevent_source:sysevent_source",
    "$hiview_plugin/unified_collector:unified_collector",
    "$hiview_plugin/usage_event_report:usage_event_report",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  version_script = "libdft.map"
  part_name = "hiview"
  subsystem_name = "hiviewdfx"
}

ohos_shared_library("bdfr") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  deps = [
    ":bdfr_plugin_config",
    "$hiview_plugin/faultlogger:faultlogger",
    "$hiview_plugin/faultlogger:libfaultlogger",
    "$hiview_plugin/reliability/bbox_detectors:bbox_detector",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  version_script = "libdfr.map"

  part_name = "hiview"
  subsystem_name = "hiviewdfx"
}

ohos_prebuilt_etc("bdfr_plugin_config") {
  source = "bdfr_plugin_config"
  part_name = "hiview"
  subsystem_name = "hiviewdfx"
  relative_install_dir = "hiview"
}
