# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/hiviewdfx/hiview/hiview.gni")
import("//build/ohos.gni")

config("hiview_core_config") {
  visibility = [ "*:*" ]
  include_dirs = [ "include" ]
  cflags_cc = [ "-D__HIVIEW_OHOS__" ]
}

ohos_source_set("sys_dispatcher") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  part_name = "hiview"
  subsystem_name = "hiviewdfx"
  public_configs = [ ":hiview_core_config" ]

  sources = [ "sys_dispatcher.cpp" ]

  deps = [
    "$hiview_adapter/plugins/eventservice/service:sys_event_service_adapter",
    "$hiview_base:hiviewbase",
    "$hiview_base/event_export:event_export_engine",
  ]

  external_deps = [
    "cJSON:cjson",
    "ffrt:libffrt",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "relational_store:native_rdb",
  ]
}

group("unittest") {
  testonly = true
  deps = []
}

group("moduletest") {
  testonly = true
  deps = []
}

group("fuzztest") {
  testonly = true
  deps = []
}
